@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.17
 
+	- The LPD backend now sends the job title as the print
+	  filename.
 	- Added support for variable sizes in the EPSON dot
 	  matrix printer drivers.  This allows for pages as
 	  short as 1/2" (1 row of labels) and does not do an
